Add trace event for phantom handle processing callback.

BUG=chromium:608312
LOG=NO

Review-Url: https://codereview.chromium.org/1934993002
Cr-Commit-Position: refs/heads/master@{#35933}